# aarnn_rust

./: .dockerignore  .gitignore  .ui_warnings.txt  COMPLIANCE.md  Cargo.toml  Containerfile  DOCKER_OPENSHIFT.md  Dockerfile  GROWTH.md  README.md  REQUIREMENTS.md  SECURITY.md  aarnn_rust.80s-21485,cortex.btr  aarnn_rust.80s-92242,cortex.btr  build.rs  build_container.sh  celegans.py  check_errors.txt  config.json  ga_core_affinity.json  ga_safety_heuristics.json  layout.md  main.py  mkdocs.yml  model.nml  nao_config.json  network_aarnn_6layer.json  network_celegans.json  requirements.txt  run_container_cluster.sh  run_container_desktop_ui.sh  run_container_node.sh  run_container_orchestrator.sh  run_container_standalone.sh  run_container_web_ui.sh  run_examples.sh  run_search.sh  run_webcluster.sh  run_webot.sh  webots.yaml
.github/wiki/: Home.md
.github/workflows/: auto-version.yml  build-and-release.yml  build.yml  ci.yml  container-build.yml
aer_fabric_bridge/: Cargo.toml  README.md
aer_fabric_bridge/config/: cluster.toml  fpaa_mapping.toml  node.toml  node_slots.toml  synapses.toml
aer_fabric_bridge/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  time.rs
aer_fabric_bridge/src/aer/: address.rs  codec.rs  event.rs  mod.rs  packet.rs
aer_fabric_bridge/src/discovery/: beacon.rs  mod.rs  node_identity.rs  peer_table.rs  slot_allocator.rs
aer_fabric_bridge/src/hardware/: fpaa.rs  gpio.rs  gpio_linux.rs  gpio_mock.rs  mod.rs  pika.rs  software_kernel.rs  spi.rs  spi_linux.rs  spi_mock.rs
aer_fabric_bridge/src/network/: mod.rs  sockets.rs  udp_control.rs  udp_event_rx.rs  udp_event_tx.rs
aer_fabric_bridge/src/routing/: bridge_route_table.rs  endpoint_table.rs  host_subscription_table.rs  mod.rs  router.rs  synapse_table.rs
aer_fabric_bridge/src/runtime/: mod.rs  queues.rs  shutdown.rs  tasks.rs
ansible/: ansible.cfg  inventory.ini
ansible/group_vars/: all.yml
ansible/playbooks/: site.yml
ansible/scripts/: run_all.sh  run_deploy_only.sh
deploy/base/: kustomization.yaml  local-multi-node.yaml  node.yaml  orchestrator.yaml  standalone.yaml  web-ui.yaml
docs/: aarnn_fpaa_partitioning.md  aarnn_next10_parameters_spec.md  architecture.md  growth_workflow_alignment.md  index.md  operations.md  operator.md
examples/: Makefile  nao_mapping.rs  nao_nn_controller.cpp  nao_nn_controller_uds.cpp  nao_runner.rs  nn_uds_server.rs  robot_spike_probe.rs  uds_latency_client.rs  uds_latency_server.rs  webots_controller.cpp
experiments/ab/: ab_test.py
experiments/bandits/: bandit.py
experiments/rl/: rl_router.py
fpaa/: README.md  algorithms.json
fpaa/okika/: 01_synaptic_filter.okika.json  02_short_term_plasticity.okika.json  03_adaptive_threshold_homeostasis.okika.json  04_active_dendrite.okika.json  05_gap_junction_field.okika.json  06_morphology_transmission.okika.json  07_triplet_scaling_dale_hybrid.okika.json  README.md  build_ahf_from_sources.py  program_01_synaptic_filter.py  program_02_short_term_plasticity.py  program_03_adaptive_threshold_homeostasis.py  program_04_active_dendrite.py  program_05_gap_junction_field.py  program_06_morphology_transmission.py  program_07_triplet_scaling_dale_hybrid.py  vendor_export_wrapper.sh
fpaa/xcos/: 00_generate_all.sce  01_synaptic_filter.sce  02_short_term_plasticity.sce  03_adaptive_threshold_homeostasis.sce  04_active_dendrite.sce  05_gap_junction_field.sce  06_morphology_transmission.sce  07_triplet_scaling_dale_hybrid.sce  README.md
gitops/argocd/: application.yaml
include/: device_mapper.hpp  keyboard_mapper.hpp  neuromorphic_bridge.h
k8s/base/: service.yaml
k8s/istio/: virtualservice.yaml
k8s/rollouts/: rollout.yaml
ml/inference/: server.py
ml/training/: train.py
monitoring/grafana/: dashboard.json
monitoring/prometheus/: queries.yaml
operator/controllers/: autonomous_controller.py  experiment_controller.py  model_controller.py
proto/: distributed.proto
scripts/: aarnn_biomimicry_metrics.py  apt_retry.sh  build_celegans_network_json.py  build_container.sh  build_drosophila_network_json.py  build_hexapod_network_json.py  build_nao_network_json.py  build_webots_celegans_assets.py  build_webots_drosophila_assets.py  build_webots_drosophila_assets_original.py  build_webots_multi_world.py  build_webots_zebrafish_assets.py  build_zebrafish_network_json.py  container_entrypoint.sh  container_run_common.sh  container_workloads.sh  deploy.sh  deploy_mixed_cluster.sh  ensure_container_rustup.sh  package-release.sh  prepare_container_package.sh  prepare_runtime_workspaces.py  run_aarnn_with_compatible_libclang.sh  run_celegans_cli_webots.sh  run_celegans_combo_webots.py  run_celegans_rust_ui_webots.sh  run_celegans_web_ui_webots.sh  run_drosophila_cli_webots.sh  run_drosophila_combo_webots.py  run_drosophila_rust_ui_webots.sh  run_drosophila_web_ui_webots.sh  run_hexapod_cli_webots.sh  run_hexapod_rust_ui_webots.sh  run_hexapod_web_ui_webots.sh  run_multi_robot_webots.sh  run_nao_combo_webots.py  train.sh
src/: aer.rs  aer_can.rs  affinity.rs  auth_store.rs  bridge.rs  central_auth.rs  cl_compute.rs  config.rs  deployment.rs  distributed.rs  engine.rs  ffi.rs  fpaa.rs  ga.rs  gpu_api.rs  lib.rs  main.rs  monitor.rs  morphology.rs  network.rs  nmchain.rs  obs.rs  openmpi_runtime.rs  providers.rs  rdma.rs  runner.rs  runtime.rs  runtime_api.rs  service_access.rs  shared_fs.rs  shmem.rs  sim.rs  stimuli.rs  topology.rs  ui.rs  viz.rs
tests/: reproduce_issue.rs  runtime_manager.rs  web_ui_browser_compat.rs
tools/: build_webots_stub.sh  check_opencv_clang.sh  export_neuroml.py  export_nir.py  export_onnx.py  export_pynn.py  export_tflite.py  extract_last_dense_tflite.py  genetic_param_search.py  import_neuroml.py  import_nir.py  import_onnx.py  import_pynn.py  import_tflite.py  inspect_onnx.py  inspect_tflite.py  run_ui_cluster_containers.sh  run_ui_container.sh  uds_diag.py  uds_webui_bridge.py
web_ui/: app.js  docs.html  index.html  service-access.js  shell.js  style.css  swagger.html
webots_service/: Containerfile  __main__.py  app.py  default_catalog.json  requirements.txt
(+70 files in other folders)
