[package]
name = "aarnn_rust"
version = "0.1.2"
edition = "2024"

[dependencies]
ndarray = { version = "0.17", features = ["blas", "rayon"] }
ndarray-rand = "0.16"
rand = { version = "0.10", features = ["thread_rng"] }
rand_distr = "0.6"
clap = { version = "4.6", features = ["derive"] }
plotters = "0.3"
plotters-svg = "0.3"
plotters-bitmap = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "2.0"
anyhow = "1.0"
fastrand = "2"
rayon = { version = "1.12", optional = true }
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
argon2 = "0.5"
openidconnect = { version = "4", features = ["reqwest"] }
reqwest = { version = "0.13", features = ["blocking", "cookies", "json"] }
fs2 = "0.4"
hex = "0.4"
time = "0.3"
opencl3 = { version = ">=0.12.3", optional = true }
cudarc = { version = ">=0.19.3", optional = true, default-features = false, features = ["std", "driver", "nvrtc", "fallback-dynamic-loading", "cuda-12000"] }
num_cpus = { version = "1.17", optional = true }
tonic = { version = "0.14" }
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
proc-macro2 = { version = "1.0", optional = true }
bindgen = { version = ">=0.72.1", optional = true }
cmake = { version = "0.1", optional = true }
sysinfo = { version = "0.38", optional = true }
core_affinity = { version = "0.8", optional = true }
tracing = { version = "0.1", optional = true }
image = { version = "0.25", optional = true }
nokhwa = { version = "0.10", optional = true, default-features = false, features = ["input-native"] }
ibverbs = { version = "0.9", optional = true }
mpi = { version = ">=0.8.1", optional = true }

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"

[dependencies.eframe]
version = "0.34"
optional = true
default-features = true
features = ["default", "wgpu"]

[dependencies.egui]
version = "0.34"
optional = true

[dependencies.rfd]
version = "0.17"
optional = true

[dependencies.cpal]
version = "0.17"
optional = true

[dependencies.symphonia]
version = "0.5"
optional = true
features = ["aac", "mp3", "flac", "vorbis", "wav"]

[dependencies.rustfft]
version = "6.4"
optional = true

[features]
default = ["parallel", "sysinfo"]

# Enable the interactive UI and audio providers via optional dependencies
# Use "dep:" to activate optional deps as features
sysinfo = ["dep:sysinfo"]
tracing = ["dep:tracing"]
ui = [
    "dep:eframe",
    "dep:egui",
    "dep:rfd",
    "dep:cpal",
    "dep:symphonia",
    "dep:rustfft",
    # serde and serde_json are always available
    "sysinfo",
]

# Experimental: enable 3D spatial growth of the hidden topology
growth3d = []

# Experimental: neuron morphology data structures and AARNN extras
morpho = []

# Engine runtime capabilities shared by standalone, orchestrator, node, and
# web_ui workloads. The explicit parallel/sysinfo entries let container builds
# use `--no-default-features` while still getting the expected runtime profile.
engine_runtime = [
    "parallel",
    "sysinfo",
    "opencl",
    "obs",
    "shmem",
    "growth3d",
    "morpho",
]

# Workload aliases used by the role-specific container builds.
standalone_workload = ["engine_runtime"]
orchestrator_workload = ["engine_runtime"]
node_workload = ["engine_runtime"]
web_ui_workload = ["engine_runtime"]
desktop_ui_workload = [
    "engine_runtime",
    "ui",
    "image_input",
    "robot_io",
]

# Backward-compatible alias for the previous broad container feature set.
container = ["desktop_ui_workload"]

# Enable CPU data-parallelism with Rayon
parallel = [
    "dep:rayon",
    "dep:core_affinity",
]
core_affinity = ["dep:core_affinity"]

# Enable GPU acceleration with OpenCL
opencl = [
    "dep:opencl3",
]

# Enable CUDA acceleration backend (used as fallback when OpenCL GPU is unavailable)
cuda = [
    "dep:cudarc",
]

# Optional: observability (timings/logs)
obs = [
    "dep:tracing",
]

# Optional input sources
image_input = [
    "ui",
    "dep:image",
]

video_input = [
    "ui",
    "dep:opencv",
]

webcam_input = [
    "ui",
    "dep:nokhwa",
]

# Optional: generic robot IO bridge (e.g., Webots adapters)
robot_io = []

# In-process C ABI for low-latency Webots integration
# Implies UI (Runner) and robot_io (mapping/adapters); also needs serde/json for init schema
ffi_bridge = [
    "ui",
    "robot_io",
]

# Experimental: shared-memory ring buffer for cross-process ultra-low-latency IO
shmem = [
    "dep:memmap2",
]

# Enable RDMA support
rdma = [
    "dep:ibverbs",
    "dep:proc-macro2",
    "dep:bindgen",
    "dep:cmake",
]

# Enable OpenMPI-based distributed bootstrap and rank orchestration helpers
openmpi = [
    "dep:mpi",
]

[lib]
name = "aarnn_rust"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies.memmap2]
version = "0.9"
optional = true

[target.'cfg(not(target_arch = "aarch64"))'.dependencies.opencv]
version = "0.98"
optional = true
default-features = false
features = [
    "clang-runtime",
    "videoio",
]

[patch.crates-io]
ibverbs-sys = { path = "third_party/ibverbs-sys" }
mpi-sys = { path = "third_party/mpi-sys" }
