[package]
name = "aer_fabric_bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bitflags = { version = "2", features = ["serde"] }
byteorder = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-queue = "0.3"
ctrlc = "3"
dashmap = "6"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
gpiod = { version = "0.3", optional = true }
spidev = { version = "0.7", optional = true }

[features]
default = ["mock-hardware"]
mock-hardware = []
linux-gpio = ["dep:gpiod"]
linux-spi = ["dep:spidev"]
